# pick_and_place_baxter_moveit

./: CMakeLists.txt  package.xml  position_record.txt  readme
launch/: _test.launch.swp  debug_qr_object_service.launch  gripper_test.launch  kinect_ar_bundle.launch  kinect_ar_ind.launch  moveit_test.rviz  multi_robot_task_demo.launch  multi_robot_task_demo_baxter.launch  multi_robot_task_demo_visionManip.launch  multi_robot_task_demo_visionManip.launch~  multi_robot_task_demo_visionManip_baxter.launch  new_test.launch  pick_place.launch  qr_object_service.launch  rosbag_webcam.launch  table_segmentation.launch  table_setting.launch  table_setting_debug.launch  test.launch  test_world.launch  training_part2.launch  webcam.launch
params/: NodeDescription.yaml~
src/: baxter_sim_ex.py  human_multi_network.cc~  human_multi_network.cpp~  move_group_python_interface_tutorial.py  multi_robot_network_visionManip.cpp~  table_object_behavior_VisionManip.cpp~  table_object_behavior_VisionManip_human.cpp~  test_moveit.py
